# Dream-11

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dream_11.ipynb  LICENSE  PYPI_PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SUPPORT.md  codemeta.json  pyproject.toml  requirements-gurobi.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  research-reproduction.yml
.github/workflows/: publish-pypi.yml  tests.yml
data/: README.md  example_players.csv
docs/: data_provenance.md  fantasy-cricket-team-optimisation-guide.md  faq.md  project_overview.md  reproducibility_checklist.md  research_reuse.md
examples/: run_optimisation.py
experiments/: __init__.py  reproduce_paper_results.py
results/synthetic_reference/: README.md  experiment_summary.csv
src/: __init__.py  dream11_optimizer.py
tests/: test_dream11_optimizer.py  test_reproduce_paper_results.py
