[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dream11-integer-optimisation"
version = "0.1.0"
description = "Paper-aligned integer optimisation for Dream11 cricket team selection"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Saurav Singla"},
  {name = "Swapna Samir Shukla"},
]
keywords = ["integer-programming", "fantasy-cricket", "optimisation", "pulp", "gurobi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=1.5,<4",
  "pulp>=2.7,<4",
  "matplotlib>=3.7,<4",
]

[project.optional-dependencies]
test = ["pytest>=7,<10"]
gurobi = ["gurobipy>=10"]

[project.scripts]
dream11-reproduce = "experiments.reproduce_paper_results:main"

[project.urls]
Repository = "https://github.com/sauravsingla/Dream-11"
Paper = "https://doi.org/10.26438/ijcse/v8i11.16"

[tool.setuptools]
packages = ["src", "experiments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
