[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dream11-integer-optimisation"
version = "0.1.0"
description = "Dream11 fantasy cricket lineup optimizer and team generator using integer programming, risk-aware optimisation, PuLP and Gurobi"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Saurav Singla"},
  {name = "Swapna Samir Shukla"},
]
keywords = [
  "dream11",
  "dream-11",
  "dream 11",
  "dream11-team-prediction",
  "dream11-team-selection",
  "dream11-team-generator",
  "fantasy-cricket",
  "fantasy-cricket-optimizer",
  "fantasy-cricket-lineup",
  "fantasy-cricket-team-generator",
  "fantasy-sports",
  "cricket-analytics",
  "cricket-team-selection",
  "lineup-optimisation",
  "lineup-optimization",
  "roster-optimisation",
  "roster-optimization",
  "team-selection",
  "squad-optimisation",
  "sports-analytics",
  "player-selection",
  "captain-selection",
  "integer-programming",
  "binary-integer-programming",
  "mixed-integer-programming",
  "mathematical-optimisation",
  "portfolio-optimisation",
  "risk-aware-optimisation",
  "operations-research",
  "pulp",
  "cbc-solver",
  "gurobi",
  "python",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=1.5,<4",
  "pulp>=2.7,<4",
  "matplotlib>=3.7,<4",
]

[project.optional-dependencies]
test = [
  "pytest>=7,<10",
  "build>=1,<2",
  "twine>=5,<7",
]
gurobi = ["gurobipy>=10"]

[project.scripts]
dream11-reproduce = "experiments.reproduce_paper_results:main"

[project.urls]
Homepage = "https://github.com/sauravsingla/Dream-11"
Repository = "https://github.com/sauravsingla/Dream-11"
Documentation = "https://github.com/sauravsingla/Dream-11#readme"
Paper = "https://doi.org/10.26438/ijcse/v8i11.16"
ResearchGate = "https://www.researchgate.net/publication/346564787_Integer_Optimisation_for_Dream_11_Cricket_Team_Selection"
Presentation = "https://www.slideshare.net/slideshow/integer-optimisation-for-dream-11-cricket-team-selection/239396861"
Issues = "https://github.com/sauravsingla/Dream-11/issues"

[tool.setuptools]
packages = ["src", "experiments"]

[tool.pytest.ini_options]
testpaths = ["tests"]